preview button and caption fixes. font check on mobile and desktop. second revision submission

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -84,6 +84,7 @@ Height: 661px;
 /*on gh pages my like button displays properly on all cards but from liveServer the third card displays it on a different line and I don't understand why can you help me with that ?*/
 .card__like {
   background-image: url("../images/like-State=Hover.svg");
+  background-repeat: no-repeat;
   width: 23px;
   height: 20px;
   border: none;
